# eido

./: .enclii.yml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  enclii.yaml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/contracts/: observation.v1.json
apps/api/src/eido_api/: auth.py  config.py  main.py  models.py
apps/api/src/eido_api/db/: __init__.py  redis.py  session.py
apps/api/src/eido_api/routers/: __init__.py  captures.py  collections.py  export.py  handoffs.py  health.py  jobs.py  search.py  social.py  tokens.py
apps/api/src/eido_api/services/: __init__.py  auto_tag.py  entitlement.py  handoff.py  provisioning.py  service_auth.py
apps/api/tests/: test_models.py  test_observation_contract.py  test_service_auth.py  test_smoke.py
apps/web/: .dockerignore  Dockerfile  next.config.js  package.json  tailwind.config.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/capture/[id]/: page.tsx
apps/web/src/app/capture/new/: page.tsx
apps/web/src/components/: CaptureCard.tsx  MeasureTool.tsx  SpzPoints.tsx
docs/: DEPLOYMENT.md
infra/k8s/production/: api-deployment.yaml  api-service.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  orchestration-deployment.yaml  pdb.yaml  redis.yaml  resource-quota.yaml  secrets-template.yaml  web-deployment.yaml  web-service.yaml
ops/: provision.sh
services/colmap-sfm/: Dockerfile  entrypoint.py
services/gaussian-splatting/: Dockerfile  entrypoint.py
services/orchestration/: Dockerfile  worker.py
services/splat-to-mesh/: Dockerfile  entrypoint.py
services/spz-compress/: Dockerfile  entrypoint.py  spz_writer.py
services/spz-compress/tests/: test_spz_writer.py
