[project]
name = "eido-api"
version = "0.1.0"
description = "Eido API — Reality Capture Ingest, Job Queue & Ecosystem Handoffs"
requires-python = ">=3.11"
authors = [{name = "MADFAM", email = "dev@madfam.io"}]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eido_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = ["E501", "B008", "UP042"]  # UP042: keep explicit (str, Enum) enums; StrEnum migration is a separate change

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
# SQLAlchemy legacy Column[...] typing produces false positives (mypy sees a
# model attribute as Column[str] rather than str on read/write, and wants an
# annotation on each Column(...)). The real fix is migrating the models to the
# 2.0 Mapped[]/mapped_column() style; until then these three codes are disabled
# so the lane passes without silencing real bugs elsewhere.
disable_error_code = ["arg-type", "assignment", "var-annotated"]
